# xfce4-memgraph-plugin

./: COPYING  ChangeLog  INSTALL  Makefile.in  NEWS  README  aclocal.m4  config.guess  config.h.in  config.sub  configure  configure.ac
icons/: Makefile.in
icons/16x16/: Makefile.am  Makefile.in
icons/22x22/: Makefile.am  Makefile.in
icons/48x48/: Makefile.am  Makefile.in
panel-plugin/: Makefile.am  Makefile.in  mem.c  mem.h  memgraph.desktop.in  mode.c  mode.h  os.c  os.h  properties.c  properties.h  settings.c  settings.h
po/: POTFILES.in  POTFILES.skip  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nl.po  oc.po  pa.po  pl.po  pt.po  (+17 more)
